# storeApp

./: CMakeLists.txt  Main.qml  main.cpp  resource.qrc
DBThread/layer_1/: database.cpp  database.h
DBThread/layer_2/: batchrepo.cpp  batchrepo.h  customerrepo.cpp  customerrepo.h  orderrepo.cpp  orderrepo.h  productrepo.cpp  productrepo.h
DBThread/layer_3/: batchservice.cpp  batchservice.h  customerservice.cpp  customerservice.h  orderservice.cpp  orderservice.h  productservice.cpp  productservice.h
DBThread/layer_4/: dbworker.cpp  dbworker.h
config/: color_config.json  size_config.json
configManager/: colorconfigmanager.cpp  colorconfigmanager.h  sizeconfigmanager.cpp  sizeconfigmanager.h
core/: batchcore.cpp  batchcore.h  command.h  customercore.cpp  customercore.h  ordercore.cpp  ordercore.h  productcore.cpp  productcore.h
view/: SideBar.qml
